renamed across files and fixed overflow errors

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-* {
-    overflow-x: hidden
-}
+
 .sidebar a.active {
     background-color: #EAECF0;
 }
